// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picking Navigator Renders and Calls the Kebab Menu button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingRight": 10,
      },
      {
        "opacity": 1,
      },
    ]
  }
  testID="picking-menu"
>
  <Icon
    color="#ffffffff"
    name="dots-vertical"
    size={30}
  />
</View>
`;

exports[`Picking Navigator Renders and Calls the Manual Scan Button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="manual-scan"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingRight": 20,
      }
    }
  >
    <Icon
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</View>
`;

exports[`Picking Navigator Renders the Picking Navigator 1`] = `
<StackNavigator
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    name="PickingTabs"
    options={[Function]}
  />
  <Screen
    component={[Function]}
    name="PickBinWorkflow"
    options={
      {
        "headerLeft": [Function],
        "headerRight": [Function],
        "headerTitle": "[missing "en.PICKING.PICKING" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="SalesFloorWorkflow"
    options={
      {
        "headerLeft": [Function],
        "headerRight": [Function],
        "headerTitle": "[missing "en.PICKING.PICKING" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="CreatePick"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PICKING.CREATE_PICK" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddLocation"
    options={
      {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing "en.LOCATION.ADD_NEW_LOCATION" translation]",
        "headerTitleAlign": "left",
      }
    }
  />
</StackNavigator>
`;

exports[`Picking Navigator Renders the Picking Navigator with kebab menu 1`] = `
<StackNavigator
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    name="PickingTabs"
    options={[Function]}
  />
  <Screen
    component={[Function]}
    name="PickBinWorkflow"
    options={
      {
        "headerLeft": [Function],
        "headerRight": [Function],
        "headerTitle": "[missing "en.PICKING.PICKING" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="SalesFloorWorkflow"
    options={
      {
        "headerLeft": [Function],
        "headerRight": [Function],
        "headerTitle": "[missing "en.PICKING.PICKING" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="CreatePick"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PICKING.CREATE_PICK" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AddLocation"
    options={
      {
        "headerBackTitleVisible": false,
        "headerTitle": "[missing "en.LOCATION.ADD_NEW_LOCATION" translation]",
        "headerTitleAlign": "left",
      }
    }
  />
</StackNavigator>
`;
